--- a/acme/css/acme.css
+++ b/acme/css/acme.css
@@ -42,7 +42,7 @@ h1 {
     color: black;
     background-color: white;
 }
-nav{width: 100%;}
+nav {width: 100%;}
 nav .flexlist li,
 #page-footer li {
     display: flex;
@@ -89,7 +89,9 @@ nav .flexlist a:hover {
     flex: 1 1 auto;
 }
 
-
+#rocket>ul>li{
+    list-style-type: none;
+}
 #recipes>ul {
     margin: 0;
     padding: 0;
@@ -103,9 +105,10 @@ nav .flexlist a:hover {
 }
 
 
-.reviews>ul {
-    display: flex;
-    flex-flow: column;
+.styling>.ratings>ul>li {
+    list-style-type: none;
+
+
     font-size: .8em;
 }
 
