--- a/acme/css/acme.css
+++ b/acme/css/acme.css
@@ -5,30 +5,33 @@
 
 
 /**************************************/
-#wrapper {
+
+#wrapper { max-width: 100%;
     background-color: white;
-    margin-left: 15%;
-    margin-right: 15%;}
+
+    }
 
 #body {
     background-image: url(/acme/images/site/background.jpg);
+
     background-repeat: no-repeat;
-    background-size: 2000px 1500px;
+    padding: 0;
+    margin: 0;
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
     list-style-type: none;
 }
+#logo { display: flex;
+    justify-content: center;
+}
 
 #home {background-image: url(/acme/images/site/feature.jpg);
     background-repeat: no-repeat;
-     align-items: flex-end;}
+     }
 
-.styling,
-.recipes {
-    max-width: 40%;
-   display:inline-block;
-}
-#duh{margin-top: 12em}
+
+
+#duh{margin-top: 4em}
 
 
 h1 {
@@ -42,16 +45,17 @@ h1 {
     color: black;
     background-color: white;
 }
-nav {width: 100%;}
-nav .flexlist li,
+
+nav {
+    max-width: 100%;}
+
+nav li,
 #page-footer li {
     display: flex;
-    align-items: center;
-    align-content: inline;
+    align-content: center;
+    justify-content: center;
     text-decoration: none;
     list-style-type: none;
-    flex: 1;
-    align-items: center;
     background-color: #de2226;
 
 }
@@ -62,50 +66,58 @@ nav .flexlist ul {
     list-style: none;
 }
 
-nav .flexlist li {
+nav li {
     display: flex;
-    flex: auto;
-    padding-left: 6em;
+    align-content: flex-start;
+    padding-left: 10em;
+    padding-right: 10em;
     padding: 1em;
+    font-size: .75em;
 }
 
-nav .flexlist a {
-    display: flex;
-    flex: auto;
+nav a {
     background-color: #de2226;
     color: #fff;
-    padding: 1% 5%;
+    padding: 5% 5%;
     text-decoration: none;
 }
 
-nav, .flexlist, a:hover {
+nav a:hover {
     background-color: #fff;
     color: #000;
-    border-bottom: 1px solid #fff;
-}
-#things {
-    display: flex;
-    flex-flow: column;
-    flex: 1 1 auto;
+    border-bottom: 3px solid #fff;
 }
 
-#rocket,ul,li{
+#rocket ul li{
     list-style-type: none;
 }
-.recipes,ul {
-    margin: 0;
-    padding: 0;
+
+.styling{
+    display:flex;
+    flex-wrap: wrap;
+max-width: 66%;
+}
+
+.flexlist {
     display: flex;
-    list-style: none;
-    font-size: .7em;
+    align-content: space-around;
+    align-content: center;
+
 }
-.recipes,ul,li {
-    flex: 1 1 auto;
-    padding: .3em;
+#page-footer {
+    display: flex;
+    justify-content: center;
+    background-color: #de2226;
+}
+.recipes {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 33%;
 }
 
-
-.styling,.ratings,ul,li {
+.styling
+ul li {
     display: flex;
 
     list-style-type: none;
@@ -113,54 +125,52 @@ nav, .flexlist, a:hover {
 
     font-size: 1em;
 }
+.styling li {list-style-type: none;}
+.recipes li {list-style-type: none;}
+#description {
+    display: flex;
+}
+.ratings {
 
+    position: right;
 
-
-
-
-
-
+}
 
 #price {
     display: flex;
     font-size: 1.8em;
     color: #de2226;
-}
-#description {
-    display: flex;
-}
-#reviews {
-    display: flex;
-}
+
 
 
 }
 
-/**FOOTER**/
-#page-footer {
-    display: flex;
-    justify-content: center;
-    background-color: #de2226;
-}
-.flexlist {
-    display: flex;
-    align-content: space-between;
-    align-content: center;
 
-}
+/*
 
+
+
+
+
+
+
+
+
+
+
+*/
 /**************************************/
 
 /***********TABLET SCREEN**************/
 
 /**************************************/
-@media screen and (min-width: 35em) {
+@media screen and (min-width: 768px) {
     body {
         font-size: 1em;
     }
 
 
-    .nav {
+    nav {
         font-size: 1.3em;
     }
 
@@ -185,41 +195,21 @@ nav, .flexlist, a:hover {
 
 
 @media screen and (min-width: 70em) {
-    body {
+    body { background-size: 2000px 1500px;
         font-size: 1.3em;
     }
+    .recipes{display:inline-block;}
 
-
-
-    .nav {
-        font-size: 1.4em;
-        margin-bottom: -1%;
-    }
-
-
-    #rocket {
-        height: 20em;
-    }
-    #rocket>ul {
-        margin-left: 65%;
-        font-size: 1.2em;
-    }
-    #styling {
-        width: 100%;
-    }
-
-    #recipes {
-        font-size: 1.2em;
+    #wrapper {
+        background-color: white;
+        margin-left: 15%;
+        margin-right: 15%;
     }
 
 
 }
 
-/*#wrapper {
-background-color: white;
-margin-left: 9%;
-margin-right: 9%;
-}
+/*
 
 
 
